--- a/app/src/main/res/layout/item_list_recycle_bin.xml
+++ b/app/src/main/res/layout/item_list_recycle_bin.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/text_TitleNotes"
-        tools:text = "محسن سعیدی"
+        tools:text = "NewNote"
         android:textSize="24sp"
         android:textColor="@color/colorYellow"
         android:layout_margin="12dp"
